# oxis

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  justfile  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/oxis/: Cargo.toml  build.rs
crates/oxis-bonds/: Cargo.toml
crates/oxis-bonds/src/: bond.rs  lib.rs  result.rs
crates/oxis-bonds/tests/: validation_tests.rs
crates/oxis-cli/: Cargo.toml
crates/oxis-cli/src/: main.rs  repl.rs
crates/oxis-cli/src/commands/: implied_vol.rs  ml.rs  mod.rs  portfolio.rs  price.rs  simulate.rs  stats.rs
crates/oxis-core/: Cargo.toml
crates/oxis-core/src/: contract.rs  error.rs  lib.rs  series.rs  source.rs
crates/oxis-core/src/math/: distributions.rs  interpolate.rs  linalg.rs  mod.rs  regression.rs  sample.rs  solvers.rs
crates/oxis-core/src/output/: human.rs  json.rs  mod.rs  tsv.rs
crates/oxis-core/src/types/: date.rs  mod.rs  option.rs
crates/oxis-curves/: Cargo.toml
crates/oxis-curves/src/: curve.rs  lib.rs  result.rs
crates/oxis-curves/tests/: validation_tests.rs
crates/oxis-data/: Cargo.toml
crates/oxis-data/src/: lib.rs
crates/oxis-greeks/: Cargo.toml
crates/oxis-greeks/src/: analytic.rs  finite_diff.rs  lib.rs  result.rs
crates/oxis-greeks/tests/: validation_tests.rs
crates/oxis-ml/: Cargo.toml
crates/oxis-ml/src/: activation.rs  american.rs  data.rs  deep_lsm.rs  dos.rs  lib.rs  mlp.rs  optim.rs  result.rs  train.rs
crates/oxis-ml/tests/: american_comparison_tests.rs  deep_lsm_validation_tests.rs  dos_validation_tests.rs  validation_tests.rs
crates/oxis-portfolio/: Cargo.toml
crates/oxis-portfolio/src/: allocation.rs  holdings.rs  lib.rs  optimize.rs  performance.rs  result.rs  risk.rs  valuation.rs
crates/oxis-portfolio/tests/: validation_tests.rs
crates/oxis-pricing/: Cargo.toml
crates/oxis-pricing/src/: asian.rs  barrier.rs  binomial.rs  black_scholes.rs  implied_vol.rs  lib.rs  lookback.rs  lsm.rs  monte_carlo.rs  result.rs
crates/oxis-pricing/tests/: exotic_tests.rs  validation_tests.rs
crates/oxis-stats/: Cargo.toml
crates/oxis-stats/src/: descriptive.rs  drawdown.rs  lib.rs  normality.rs  relational.rs  result.rs  returns.rs  risk.rs
crates/oxis-stats/tests/: validation_tests.rs
crates/oxis-stochastic/: Cargo.toml
crates/oxis-stochastic/src/: lib.rs  process.rs  result.rs  simulate.rs
crates/oxis-stochastic/tests/: validation_tests.rs
crates/oxis/src/: lib.rs  main.rs  repl.rs
crates/oxis/src/bonds/: bond.rs  mod.rs  result.rs
crates/oxis/src/commands/: bond.rs  curve.rs  exotic.rs  greeks.rs  implied_vol.rs  ml.rs  mod.rs  portfolio.rs  price.rs  simulate.rs  stats.rs
crates/oxis/src/core/: context.rs  contract.rs  mod.rs  series.rs  source.rs
crates/oxis/src/core/market/: market_data.rs  mod.rs
crates/oxis/src/core/math/: interpolate.rs  linalg.rs  regression.rs  rng.rs  solvers.rs
crates/oxis/src/core/output/: human.rs  json.rs  mod.rs  tsv.rs
crates/oxis/src/core/types/: date.rs  money.rs
crates/oxis/src/curves/: curve.rs  mod.rs  result.rs
crates/oxis/src/data/: mod.rs
crates/oxis/src/greeks/: analytic.rs  finite_diff.rs  mod.rs  result.rs
crates/oxis/src/ml/: american.rs  data.rs  deep_lsm.rs  dos.rs  mlp.rs  mod.rs  optim.rs  result.rs  train.rs
crates/oxis/src/portfolio/: allocation.rs  holdings.rs  mod.rs  optimize.rs  performance.rs  result.rs  risk.rs  valuation.rs
crates/oxis/src/pricing/: asian.rs  barrier.rs  binomial.rs  black_scholes.rs  implied_vol.rs  lookback.rs  lsm.rs  mod.rs  monte_carlo.rs  result.rs
crates/oxis/src/stats/: descriptive.rs  drawdown.rs  mod.rs  normality.rs  relational.rs  result.rs  returns.rs  risk.rs
crates/oxis/src/stochastic/: mod.rs  process.rs  result.rs  simulate.rs
crates/oxis/tests/: american_comparison_tests.rs  bonds_validation_tests.rs  curves_validation_tests.rs  deep_lsm_validation_tests.rs  dos_validation_tests.rs  greeks_validation_tests.rs  ml_validation_tests.rs  portfolio_validation_tests.rs  pricing_exotic_tests.rs  pricing_validation_tests.rs  stats_validation_tests.rs  stochastic_validation_tests.rs
docs/: architecture.md  models.md  parity.md  quantlib-structure.md
python/: Cargo.toml  README.md  build.rs  pyproject.toml
python/src/: lib.rs
python/tests/: test_black_scholes.py  test_m2.py  test_m2b.py  test_m3.py  test_m4.py  test_m5.py  test_m6.py  test_m7.py  test_m8.py  test_m9.py
validation/: README.md  generate_reference.py  requirements.txt
validation/reference/: asian.json  barrier.json  binomial.json  black_scholes.json  bonds.json  deep_lsm.json  dos.json  greeks.json  heston_european.json  implied_vol.json  lookback.json  ml.json  monte_carlo_american.json  portfolio.json  processes.json  stats.json  yield_curve.json
