[workspace]
resolver = "2"
members = ["crates/oxis-core"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jpvich/oxis"
homepage = "https://github.com/jpvich/oxis"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
# Keep the bar high; tighten as the codebase grows.
all = { level = "warn", priority = -1 }
