[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "oxis"
description = "OXIS — validated quantitative finance, in Rust with Python bindings."
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Office/Business :: Financial",
    "Intended Audience :: Financial and Insurance Industry",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/jpvich/oxis"
Repository = "https://github.com/jpvich/oxis"

[tool.maturin]
# Cargo.toml is in this directory; build the `oxis` cdylib.
manifest-path = "Cargo.toml"
module-name = "oxis"
features = ["pyo3/extension-module"]
