[package]
name = "oxis-bonds"
version = "0.0.0"
description = "Fixed-income bonds for OXIS (pricing, yield, duration, convexity), validated against QuantLib."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
oxis-core = { workspace = true }
oxis-curves = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
