[package]
name = "oxis-core"
version = "0.0.0"
description = "Stable core types and numerics for OXIS, a validated quantitative finance library in Rust."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
