[package]
name = "oxis-core"
version = "0.0.0"
description = "Stable core types and numerics for OXIS, a validated quantitative finance library in Rust."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

# The core stays lean and runtime-agnostic on purpose: no Polars/Arrow, no async
# runtime (tokio), no HTTP. Those belong in service modules behind a trait. See
# docs/architecture.md ("two module kinds" + "lean core" guardrails).
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
