[package]
name = "oxis-curves"
version = "0.0.0"
description = "Yield curves & term structures for OXIS (interpolated discount/zero/forward), validated against QuantLib."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
oxis-core = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
