[package]
name = "oxis-ml"
version = "0.0.0"
description = "ML-based pricing for OXIS — differential machine learning (twin networks), hand-rolled and validated against the classical engines. Ring 4."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
oxis-core = { workspace = true }
oxis-pricing = { workspace = true }
oxis-greeks = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
