[package]
name = "oxis-stats"
version = "0.0.0"
description = "Statistics & time-series analytics for OXIS (descriptive stats, returns, risk metrics). Reserved — Ring 3."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
oxis-core = { workspace = true }

# When this ring lands, Polars may be added here ONLY behind a feature flag —
# never in the core. The typed interchange types from `oxis_core::series` stay
# the boundary; Polars is an internal compute detail of this crate.
# [features]
# dataframe = ["dep:polars"]
