[package]
name = "oxis-stochastic"
version = "0.0.0"
description = "Stochastic process generators for OXIS (GBM, OU, Vasicek, CIR, Merton jump-diffusion, Heston) — reproducible path simulation, validated against closed-form moments."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
oxis-core = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
