[package]
name = "oxis"
version = "0.1.0"
description = "OXIS — Open eXtensible Instruments & Statistics: a validated quantitative-finance library, CLI, and REPL."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["finance", "quant", "options", "pricing", "black-scholes"]
categories = ["finance", "mathematics", "science", "command-line-utilities"]

# The single crate. `oxis` is the whole library (every domain is an internal
# module: `oxis::pricing`, `oxis::ml`, …) plus the `oxis` binary. A Rust user
# adds one dependency (`cargo add oxis`); a CLI user installs one crate
# (`cargo install oxis`).
[lib]
name = "oxis"
path = "src/lib.rs"

# The CLI binary. Built by default (the `cli` feature is on) so `cargo install
# oxis` and a plain `cargo build` produce the full `oxis` command. Library-only
# users can drop it with `default-features = false`.
[[bin]]
name = "oxis"
path = "src/main.rs"
required-features = ["cli"]

[lints]
workspace = true

[features]
default = ["cli"]
# Each domain module is a feature so a library user compiles only what they need:
# `oxis = { version = "0.1", default-features = false, features = ["pricing", "ml"] }`.
# Feature edges mirror the module dependency graph (pricing → stochastic, etc.);
# the numeric deps (rand/rayon) are pulled in only by the modules that use them.
pricing = ["stochastic", "dep:rand", "dep:rand_distr", "dep:rayon"]
greeks = ["pricing"]
curves = []
bonds = ["curves"]
stochastic = ["dep:rand", "dep:rand_distr", "dep:rayon"]
stats = []
portfolio = ["stats"]
ml = ["pricing", "greeks"]
data = []
# Everything the library exposes.
full = ["pricing", "greeks", "curves", "bonds", "stochastic", "stats", "portfolio", "ml"]
# The CLI/REPL binary: needs every module plus the arg-parsing/line-editing deps.
cli = ["full", "dep:clap", "dep:anyhow", "dep:reedline", "dep:shlex"]

[dependencies]
# Always present — the `core` module is the stable contract every surface builds on.
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# Numeric deps used by the pricing/stochastic/ml modules only; optional so a
# library user enabling e.g. just `stats` does not compile them.
rand = { workspace = true, optional = true }
rand_distr = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
# CLI/REPL-only dependencies, gated behind the `cli` feature.
clap = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
reedline = { workspace = true, optional = true }
shlex = { workspace = true, optional = true }
